Compact Gnnt quick access filters + completion sounds